--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "双色球AI智能选号助手 V23-稳定增强版",
   "main": "server.js",
   "scripts": {
+  "serve": "vue-cli-service serve",
+  "build": "vue-cli-service build"  // 必须有这一行
+}
     "start": "node server.js",
     "dev": "node server.js"
   },
