--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "express": "^4.17.1"
   },
+  "devDependencies": {
+    "@vue/cli-service": "^5.0.0"
+  },
   "engines": {
     "node": ">=14.0.0"
   }
