--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "AI助手",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.0"
+    "@vue/cli-service": "^4.5.19",
+    "vue-template-compiler": "^2.6.14"
   },
   "engines": {
     "node": ">=14.0.0"
