--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "ssq-ai-vue",
+  "name": "bigerange1234-github-io",
   "version": "1.0.0",
-  "description": "双色球AI智能选号助手 - Vue版本",
-  "type": "module",
+  "description": "双色球AI智能选号助手 V23-稳定增强版",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && echo '构建完成，请手动部署dist目录'"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "start": "node server.js",
+    "dev": "node server.js",
+    "vite:build": "vite build"
   },
   "keywords": [
     "双色球",
     "彩票",
     "AI预测",
-    "数据分析",
-    "Vue",
-    "Vite"
+    "数据分析"
   ],
   "author": "AI助手",
   "license": "MIT",
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.7",
-    "chart.js": "^4.4.8",
-    "tailwindcss": "^3.4.3"
+    "express": "^4.17.1",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "@vue/cli-service": "^4.5.19",
+    "vue-template-compiler": "^2.6.14",
+    "terser": "^5.19.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=14.0.0"
   }
 }
