--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "start": "node server.js",
-    "dev": "node server.js",
-    "vite:build": "vite build"
+    "dev": "node server.js"
   },
   "keywords": [
     "双色球",
@@ -20,7 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "chart.js": "^4.4.8",
+    "pinia": "^2.1.7",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.5.19",
