--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "@vue/cli-service": "^4.5.19",
     "vue-template-compiler": "^2.6.14",
-    "terser": "^5.19.2"
+    "terser": "^5.19.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.23.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.23.3"
   },
   "engines": {
     "node": ">=14.0.0"
